inc/css/style.css
/* ... */
/*-- Responsive --*/
@media(min-width: 1170px){
    .row{
        width: 1170px;
    }
    #sc-slider-banner{
    
    }
    #sc-slider-banner .sc-slider-banner{
    }
}
@media(max-width: 1169px){
/*    .site-branding .row [class*="col-"], .site-title{
        line-height: initial;
    }*/

    .site-title{
        display: inline-block;
        line-height: 80px;
        margin-left: 15px;
    }
    #comments{
        padding: 0 15px;
    }
    
    #sc-slider-banner{
        /*top: 15%;*/
        
    }
    #sc-slider-banner .sc-slider-banner{
        width: 60%;
    }
    
}
@media( min-width: 992px ){
    .site-branding-mobile{
        display: none;
    }    
}
@media( max-width: 991px ){
    .item-page{
        margin-left: 15px;
        margin-right: 15px;
        margin-bottom: 15px;
    }
    .item-post .post-title{
        display: initial;
        bottom: 0;
        right: 0;
        line-height: 16px;
    }
    .site-branding{
        display: none;
    }
    .site-content-wrapper{
        margin-left: 0;
    }
    .site-footer{
        margin-left: 0;
        width: 100%;
    }
    #tasty-mobile-toggle{
        display: inline-block;
        float: left;
        cursor: pointer;
        /*border: 1px solid rgba(0, 0, 0, 0);*/
        /*width: 80px;*/
        line-height: 80px;
        font-size: 28px;
        position: relative;
        text-align: center;
    }
    #tasty-mobile-toggle .menu{
        display: none;
        background-color: #333333;
        margin-left: 0;
        position: fixed;
        width: 100%;
        box-shadow: 0 0 3px rgb(51, 51, 51);
        -moz-box-shadow: 0 0 3px rgb(51, 51, 51);
        -webkit-box-shadow: 0 0 3px rgb(51, 51, 51);       
        z-index: 99;
        padding-left: 0px;
        list-style: none;
    }
    #tasty-mobile-toggle .menu > ul {
        margin: 0;
    }
    #tasty-mobile-toggle .menu li {
        width: auto;
        list-style: none;
        list-style-type: none;
        line-height: 30px;
    }
    #tasty-mobile-toggle .menu li a{
        font-size: 14px;
        text-align: left;
        padding: 3px 5px;
        display: block;
        line-height: 30px;
        color: #D1D1D1;
        padding-left: 28px;

    }
    #tasty-mobile-toggle .menu li a:hover,
    #tasty-mobile-toggle .menu li.current-menu-item a{
        background-color: rgb(31, 31, 31);
    }
    
    #tasty-mobile-toggle:hover{
        
    }
    #tasty-mobile-toggle .fa{
        line-height: 82px;
        height: 82px;
        width: 80px;
        font-size: 35px;
    }
    #tasty-mobile-toggle .fa.active{
        background: #333;
        color: #fff;
    }
    .site-branding-mobile .col-xs-2{
        padding-left: 0;
    }
    #sc-slider-banner {
        
        /*top: 20%;*/
        width: 100%;
    }
    .site-branding-mobile{
        /*display: block;*/
        overflow: hidden;
        height: 82px;
    } 
    .site-branding-mobile .site-title-mobile{
        line-height: 82px;
        text-align: center;
        
    }
    .site-branding-mobile.dark #tasty-mobile-toggle .fa{
        color: #ffffff;
    }
    #tasty-mobile-toggle .sub-menu{
        margin-left: 0;
    }

    #tasty-mobile-toggle .sub-menu li a{
        padding-left: 28px;
    }
    #tasty-mobile-toggle .sub-menu .sub-menu li a{
        padding-left: 40px;
    }    
    
    .site-footer .footer-boxes .widget:first-child{
        padding-left: 15px;
    }
    
}
@media( min-width: 801px ) and ( max-width: 1169px ){
    #site-navigation.main-navigation li a{
        font-size: 13px;
    }
}
@media( max-width : 801px ){
    .site-title{
        margin-left: 0;
    }
    #site-cta{
        position: initial;
        top: 0;
        margin-bottom: 0;
        width: 100%;
    }
    .site-content-wrapper{
    }
    #site-navigation{
        display: none;
    }

    #site-toolbar{
        display: none;
    }
    .site-branding{
        top: 0;
    } 
    .site-branding .col-xs-3{
        width: 100%;
        text-align: center;
        padding: 0;
    }    
    .site-branding .menu-bar,
    .site-branding .search-bar{
        display: none;
    }
    .col4{
        width: 100%;
    }
    .site-cta{
        margin-bottom: 15px;
    }
    #site-cta .col4.mid{
        margin-left: 0;
        margin-right: 0;
    }
    #site-cta .col4.mid{
        margin-bottom: 15px;
    }
    #site-cta{
        margin: 0px;
    }
}
@media ( min-width: 601px ) and ( max-width: 800px ){
    
}
@media ( max-width: 601px ){
    #site-cta .main-heading{
        font-size: 28px;
        line-height: 30px;
    }
    .sc-slider-wrapper .camera_caption{
        font-size: 14px;
        line-height: 14px;
    }

    .item-post{
        width: 49%;
    }
    #sc-slider-banner{
       
    }
    #sc-slider-banner .sc-slider-banner{
        
    }    
    #sc-slider-banner h2{
        font-size: 22px;
        line-height: 28px;
    }
    #sc-slider-banner p{
        font-size: 16px;
        line-height: 22px;
    }
   
}
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) { 
    #sc-slider-banner h2{
        font-size: 22px;
        line-height: 24px;
    }
    #sc-slider-banner{
        max-height: 150px;
        padding: 10px;
    }
    #sc-slider-banner .button-primary{
        font-size: 12px;
        padding: 0px 5px;
        height: 20px;
        line-height: 20px;
        margin-bottom: 10px;
    }
    .sc-slider-wrapper .camera_caption{
        bottom: 84px;
        bottom: 150px;
    }
    .sc-slider-wrapper .camera_caption > div span{
        font-size: 18px;
        line-height: 20px;
    }
    .camera_pag{ display: none}
}

.mb20{ margin-bottom: 20px;}
.mt20{ margin-bottom: 20px;}
.bs_nopad{ padding: 0}
/* ... */

